Implementing View FrontEnd to the Project

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,6 +12,9 @@
 	<!-- Bootstrap -->
 	<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
+	<!-- Bootstrap para testes, apagar depois que configurar thymeleaf-->
+	<link href="vaga/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
 	<!-- HTML5 shim e Respond.js para suporte no IE8 de elementos HTML5 e media queries -->
 	<!-- ALERTA: Respond.js não funciona se você visualizar uma página file:// -->
 	<!--[if lt IE 9]>
@@ -19,13 +22,9 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-	<title>VagasApp</title>
-
 </head>
 
 <body>
-
-
 
 	<header>
 
@@ -39,6 +38,7 @@
 				<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav">
 						<li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
+
 						<li class="nav-item"><a class="nav-link" href="#">
 								<< Listar Vagas>>
 							</a></li>
@@ -53,46 +53,36 @@
 
 	</header>
 
-
 	<div class="container">
+		<br> <br>
 
-		<h1>Lista de vagas cadastradas</h1>
+		<div class="row">
+
+			<div class="col">
+				<div class="card text-center">
+					<div class="card-header  card-title">
+						<h3>Vagas</h3>
+					</div>
+					<div class="card-body">
+						<p class="card-text">Módulo responsável pelas vagas ofertadas
+							pela agência de RH.</p>
+						<a href="#" class="btn btn-primary">Listar Vagas</a> <a href="#"
+							class="btn btn-success">Cadastrar Vagas</a>
+					</div>
+				</div>
+			</div>
+
+
+		</div>
 
 		<br>
 
-		<table class="table table-hover table-responsive w-auto table-striped">
-			<thead>
-				<tr>
-					<th scope="col">Nome da vaga:</th>
-					<th scope="col">Descrição:</th>
-					<th scope="col">Salário:</th>
-					<th scope="col">Expira:</th>
-					<th scope="col"></th>
-					<th scope="col">Ações:</th>
-					<th scope="col"></th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td><a href="#"><span></span></a></td>
-					<td><span></span></td>
-					<td>R$ <span></span></td>
-					<td><span></span></td>
-					<td><a href="#"><button type="button" class="btn btn-danger">Excluir</button></a></td>
-					<td><a href="#"><button type="button" class="btn btn-primary">Editar</button></a></td>
-					<td><a href="#"><button type="button" class="btn btn-success">Adicionar candidato</button></a></td>
-				</tr>
-			</tbody>
-		</table>
 
-
-		<div style="height: 100px;"></div>
 
 		<div class="footer-copyright fixed-bottom bg-dark text-center py-3">
 			<span class="text-light align-middle">| App RH - UC 12 | - ©
 				2022 Copyright: CTM Supervisão de Educação Online</span>
 		</div>
-
 
 		<!--JavaScript bootstrap-->
 		<script type="text/javascript" src="bootstrap/js/bootstrap.js"></script>
