Implemented the method to register Vacancy and list it to ModelAndView

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,19 +30,19 @@
 
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 			<div class="container-fluid">
-				<a class="navbar-brand" href="#">App RH</a>
+				<a class="navbar-brand" href="/">App RH</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
 					aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav">
-						<li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
+						<li class="nav-item"><a class="nav-link active" aria-current="page" href="/">Home</a></li>
 
-						<li class="nav-item"><a class="nav-link" href="#">
+						<li class="nav-item"><a class="nav-link" href="/vagas">
 								<< Listar Vagas>>
 							</a></li>
-						<li class="nav-item"><a class="nav-link" href="#">
+						<li class="nav-item"><a class="nav-link" href="/cadastrarVaga">
 								<< Cadastrar Vaga>>
 							</a></li>
 
@@ -66,7 +66,7 @@
 					<div class="card-body">
 						<p class="card-text">Módulo responsável pelas vagas ofertadas
 							pela agência de RH.</p>
-						<a href="#" class="btn btn-primary">Listar Vagas</a> <a href="#"
+						<a href="/vagas" class="btn btn-primary">Listar Vagas</a> <a href="/cadastrarVaga"
 							class="btn btn-success">Cadastrar Vagas</a>
 					</div>
 				</div>
