--- a/src/main/resources/templates/vaga/formVaga.html
+++ b/src/main/resources/templates/vaga/formVaga.html
@@ -20,7 +20,7 @@
 
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 			<div class="container-fluid">
-				<a class="navbar-brand" href="#">App RH</a>
+				<a class="navbar-brand" href="/">App RH</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
 					aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -29,11 +29,11 @@
 					<ul class="navbar-nav">
 						<li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
 
-						<a class="nav-link" href="#">
+						<a class="nav-link" href="/vagas">
 							<< Listar Vagas>>
 						</a>
 						</li>
-						<li class="nav-item"><a class="nav-link" href="#">
+						<li class="nav-item"><a class="nav-link" href="/cadastrarVaga">
 								<< Cadastrar Vaga>>
 							</a></li>
 
@@ -52,6 +52,7 @@
 
 		<br>
 
+		<th:block th:include="mensagemValidacao"></th:block>
 
 
 		<form method="post">
