--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -43,7 +43,7 @@
 								<< Listar Vagas>>
 							</a></li>
 						<li class="nav-item"><a class="nav-link" href="/cadastrarVaga">
-								<< Cadastrar Vaga>>
+								<<                                  Cadastrar Vaga>>
 							</a></li>
 
 					</ul>
@@ -81,7 +81,7 @@
 
 		<div class="footer-copyright fixed-bottom bg-dark text-center py-3">
 			<span class="text-light align-middle">| App RH - UC 12 | - ©
-				2022 Copyright: CTM Supervisão de Educação Online</span>
+				2024 Diog007 git hub: CTM Supervisão de Educação Online</span>
 		</div>
 
 		<!--JavaScript bootstrap-->
