--- a/src/main/resources/templates/vaga/detalhesVaga.html
+++ b/src/main/resources/templates/vaga/detalhesVaga.html
@@ -15,9 +15,9 @@
 	<!-- HTML5 shim e Respond.js para suporte no IE8 de elementos HTML5 e media queries -->
 	<!-- ALERTA: Respond.js não funciona se você visualizar uma página file:// -->
 	<!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+	<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+	<![endif]-->
 
 	<title>| App RH - UC 12 |</title>
 
@@ -26,145 +26,148 @@
 
 <body>
 
-	<header>
+<header>
 
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-			<div class="container-fluid">
-				<a class="navbar-brand" href="#">App RH</a>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="/">App RH</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
 					aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarNav">
-					<ul class="navbar-nav">
-						<li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav">
+					</li>
 
-						<li class="nav-item"><a class="nav-link" href="#">
-								<< Listar Vagas>>
-							</a></li>
-						<li class="nav-item"><a class="nav-link" href="#">
-								<< Cadastrar Vaga>>
-							</a></li>
+					<li class="nav-item"><a class="nav-link" href="/vagas">
+						<< Listar Vagas>>
+					</a></li>
+					<li class="nav-item"><a class="nav-link" href="/cadastrarVaga">
+						<< Cadastrar Vaga>>
+					</a></li>
 
-					</ul>
-				</div>
+				</ul>
 			</div>
-		</nav>
-
-	</header>
-
-	<div class="container">
-
-		<h1>Detalhes da vaga:</h1>
-		<div class="container">
-
-			<br>
-
-			<p>
-				<b>Vaga:</b> <span></span>
-			</p>
-			<p>
-				<b>Descrição do cargo:</b> <span></span>
-			</p>
-			<p>
-				<b>Expira em:</b> <span></span>
-			</p>
-			<p>
-				<b>Salário:</b> R$ <span></span>
-			</p>
-
-			<br> <br>
-
-
-
-
-
-			<h2>Cadastrar candidato:</h2>
-
-			<br>
-
-			<form method="post">
-
-				<div class="form-group">
-					<div class="row">
-
-						<div class="col">
-							<label for=""><b>Nome do candidato:</b> </label> <input type="text" value=""
-								name="nomeCandidato" class="form-control" placeholder="Nome Completo" required />
-						</div>
-
-						<div class="col">
-							<label for=""><b>RG: </b> </label><input type="text" value="" name="rg"
-								placeholder="Somente números, sem traços ou pontos." class="validate form-control"
-								required />
-						</div>
-
-						<div class="col">
-							<label for=""><b>E-mail:</b> </label> <input type="text" value="" name="email"
-								class="form-control" placeholder="email@email.com" required />
-						</div>
-
-					</div>
-
-
-
-				</div>
-
-				<button type="submit" class="btn btn-success">Adicionar
-					Candidato</button>
-			</form>
-
-
 		</div>
+	</nav>
 
-		<br> <br>
+</header>
 
-		<h2>Inscritos:</h2>
+<div class="container">
+
+	<h1>Detalhes da vaga:</h1>
+	<div th:each="vaga : ${vaga}" class="container">
 
 		<br>
 
-		<table class="table table-hover table-responsive w-auto table-striped">
-			<thead>
-				<tr>
-					<th scope="col">Nome do candidato:</th>
-					<th scope="col">RG:</th>
-					<th scope="col">E-mail:</th>
-				</tr>
-			</thead>
-			<tbody>
+		<p>
+			<b>Vaga:</b> <span th:text="${vaga.nome}"></span>
+		</p>
+		<p>
+			<b>Descrição do cargo:</b> <span th:text="${vaga.descricao}"></span>
+		</p>
+		<p>
+			<b>Expira em:</b> <span th:text="${vaga.data}"></span>
+		</p>
+		<p>
+			<b>Salário:</b> R$ <span th:text="${vaga.salario}"></span>
+		</p>
 
-				<tr>
-					<td><span></span></td>
-					<td><span></span></td>
-					<td><span></span></td>
-					<td><a class="waves-effect waves-light btn-small" href="#"><button type="button"
-								class="btn btn-danger">Excluir</button></a></td>
-				</tr>
+		<br> <br>
 
 
-			</tbody>
-		</table>
+
+
+
+		<h2>Cadastrar candidato:</h2>
+
+		<th:block th:include="mensagemValidacao"></th:block>
+
+		<br>
+
+		<form method="post" th:object="${candidato}">
+
+			<div class="form-group">
+				<div class="row">
+
+					<div class="col">
+						<label for=""><b>Nome do candidato:</b> </label> <input type="text" value=""
+																				name="nomeCandidato" class="form-control" placeholder="Nome Completo" required />
+					</div>
+
+					<div class="col">
+						<label for=""><b>RG: </b> </label><input type="text" value="" name="rg"
+																 placeholder="Somente números, sem traços ou pontos." class="validate form-control"
+																 required />
+					</div>
+
+					<div class="col">
+						<label for=""><b>E-mail:</b> </label> <input type="text" value="" name="email"
+																	 class="form-control" placeholder="email@email.com" required />
+					</div>
+
+				</div>
+
+
+
+			</div>
+
+			<button type="submit" class="btn btn-success">Adicionar
+				Candidato</button>
+		</form>
 
 
 	</div>
 
+	<br> <br>
 
-	<div style="height: 100px;"></div>
+	<h2>Inscritos:</h2>
 
-	<div class="footer-copyright fixed-bottom bg-dark text-center py-3">
+	<br>
+
+	<table class="table table-hover table-responsive w-auto table-striped">
+		<thead>
+		<tr>
+			<th scope="col">Nome do candidato:</th>
+			<th scope="col">RG:</th>
+			<th scope="col">E-mail:</th>
+		</tr>
+		</thead>
+		<tbody>
+
+		<tr th:each="candidato : ${candidatos}">
+			<td><span th:text="${candidato.nomeCandidato}"></span></td>
+			<td><span th:text="${candidato.rg}"></span></td>
+			<td><span th:text="${candidato.email}"></span></td>
+			<td><a class="waves-effect waves-light btn-small"
+				   th:href="${(#mvc.url('VC#deletarCandidato').arg(0, candidato.rg)).build()}"><button
+					type="button" class="btn btn-danger">Excluir</button></a></td>
+		</tr>
+
+
+		</tbody>
+	</table>
+
+
+</div>
+
+
+<div style="height: 100px;"></div>
+
+<div class="footer-copyright fixed-bottom bg-dark text-center py-3">
 		<span class="text-light align-middle">| App RH - UC 12 | - ©
 			2022 Copyright: CTM Supervisão de Educação Online</span>
-	</div>
+</div>
 
 
 
 
-	<!--JavaScript bootstrap-->
-	<script type="text/javascript" src="bootstrap/js/bootstrap.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+<!--JavaScript bootstrap-->
+<script type="text/javascript" src="bootstrap/js/bootstrap.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
 
-		</script>
+</script>
 
 </body>
 
