HTML visual adjustments

--- a/src/main/resources/templates/vaga/detalhesVaga.html
+++ b/src/main/resources/templates/vaga/detalhesVaga.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>App RH</title>
+	<title>Application RH</title>
 
 	<!-- Bootstrap -->
 	<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,30 +27,34 @@
 <body>
 
 <header>
-
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="/">App RH</a>
+			<a class="navbar-brand" href="/">Application RH</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
 					aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav">
+				<ul class="navbar-nav ms-auto">
+					<li class="nav-item">
+						<a class="nav-link" href="https://github.com/Diog007/aplicationRH-backend">
+							<i class="fab fa-github"></i> GitHub
+						</a>
 					</li>
-
-					<li class="nav-item"><a class="nav-link" href="/vagas">
-						<< Listar Vagas>>
-					</a></li>
-					<li class="nav-item"><a class="nav-link" href="/cadastrarVaga">
-						<< Cadastrar Vaga>>
-					</a></li>
-
+					<li class="nav-item">
+						<a class="nav-link" href="/vagas">
+							<i class="fas fa-search"></i> Buscar Vagas
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/cadastrarVaga">
+							<i class="fas fa-plus"></i> Cadastrar Vaga
+						</a>
+					</li>
 				</ul>
 			</div>
 		</div>
 	</nav>
-
 </header>
 
 <div class="container">
@@ -154,10 +158,10 @@
 
 <div style="height: 100px;"></div>
 
-<div class="footer-copyright fixed-bottom bg-dark text-center py-3">
-		<span class="text-light align-middle">| App RH - UC 12 | - ©
-			2022 Copyright: CTM Supervisão de Educação Online</span>
-</div>
+<footer class="fixed-bottom bg-dark text-light text-center py-3">
+        <span>| Application RH | - © 2024 Diog007 - <a href="https://github.com/Diog007" class="text-light">GitHub</a>
+        </span>
+</footer>
 
 
 
