--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,95 +1,98 @@
 <!DOCTYPE html>
-<html lang=”pt-br” xmlns:th="http://thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html lang="pt-br">
 
 <head>
-
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
-	<title>| App RH - UC 12 |</title>
-
-	<!-- Bootstrap -->
+	<title>| Application RH - 2024 |</title>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 	<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<style>
+		.navbar-brand {
+            font-weight: bold;
+        }
 
-	<!-- Bootstrap para testes, apagar depois que configurar thymeleaf-->
-	<link href="vaga/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        .navbar-toggler {
+            border: none;
+        }
 
-	<!-- HTML5 shim e Respond.js para suporte no IE8 de elementos HTML5 e media queries -->
-	<!-- ALERTA: Respond.js não funciona se você visualizar uma página file:// -->
-	<!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+        .nav-link {
+            font-weight: bold;
+        }
 
+        .card-header {
+            background-color: #343a40;
+            color: white;
+        }
+
+        .btn-outline-primary,
+        .btn-outline-success {
+            border-width: 2px;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+	</style>
 </head>
 
 <body>
 
-	<header>
-
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-			<div class="container-fluid">
-				<a class="navbar-brand" href="/">App RH</a>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+<header>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="/">Application RH</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
 					aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarNav">
-					<ul class="navbar-nav">
-						<li class="nav-item"><a class="nav-link active" aria-current="page" href="/">Home</a></li>
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav ms-auto">
+					<li class="nav-item">
+						<a class="nav-link" href="https://github.com/Diog007/aplicationRH-backend">
+							<i class="fab fa-github"></i> GitHub
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/vagas">
+							<i class="fas fa-search"></i> Buscar Vagas
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/cadastrarVaga">
+							<i class="fas fa-plus"></i> Cadastrar Vaga
+						</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+</header>
 
-						<li class="nav-item"><a class="nav-link" href="/vagas">
-								<< Listar Vagas>>
-							</a></li>
-						<li class="nav-item"><a class="nav-link" href="/cadastrarVaga">
-								<<                                  Cadastrar Vaga>>
-							</a></li>
-
-					</ul>
+<div class="container mt-5">
+	<div class="row">
+		<div class="col">
+			<div class="card text-center">
+				<div class="card-header">
+					<h3>Vagas</h3>
+				</div>
+				<div class="card-body">
+					<p class="card-text">Explore as oportunidades disponíveis em nossa plataforma.</p>
+					<a href="/vagas" class="btn btn-outline-primary btn-lg btn-block">Vagas Disponíveis <i
+							class="fas fa-star"></i></a>
+					<a href="/cadastrarVaga" class="btn btn-outline-success btn-lg btn-block">Publicar Nova Vaga <i
+							class="fas fa-rocket"></i></a>
 				</div>
 			</div>
-		</nav>
-
-	</header>
-
-	<div class="container">
-		<br> <br>
-
-		<div class="row">
-
-			<div class="col">
-				<div class="card text-center">
-					<div class="card-header  card-title">
-						<h3>Vagas</h3>
-					</div>
-					<div class="card-body">
-						<p class="card-text">Módulo responsável pelas vagas ofertadas
-							pela agência de RH.</p>
-						<a href="/vagas" class="btn btn-primary">Listar Vagas</a> <a href="/cadastrarVaga"
-							class="btn btn-success">Cadastrar Vagas</a>
-					</div>
-				</div>
-			</div>
-
-
 		</div>
+	</div>
+</div>
 
-		<br>
+<footer class="fixed-bottom bg-dark text-light text-center py-3">
+        <span>| Application RH | - © 2024 Diog007 - <a href="https://github.com/Diog007" class="text-light">GitHub</a>
+        </span>
+</footer>
 
-
-
-		<div class="footer-copyright fixed-bottom bg-dark text-center py-3">
-			<span class="text-light align-middle">| App RH - UC 12 | - ©
-				2024 Diog007 git hub: CTM Supervisão de Educação Online</span>
-		</div>
-
-		<!--JavaScript bootstrap-->
-		<script type="text/javascript" src="bootstrap/js/bootstrap.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-			integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-
-			</script>
+<script src="bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
