--- a/src/main/resources/templates/vaga/formVaga.html
+++ b/src/main/resources/templates/vaga/formVaga.html
@@ -1,123 +1,120 @@
 <!DOCTYPE html>
-<html lang=”pt-br” xmlns:th="http://thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html lang="pt-br">
 
 <head>
-
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>| App RH - UC 12 |</title>
-
-	<!-- Bootstrap -->
+	<title>| Application RH - UC 12 |</title>
 	<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+	<style>
+		.navbar-brand {
+            font-weight: bold;
+        }
 
+        .navbar-toggler {
+            border: none;
+        }
 
+        .nav-link {
+            font-weight: bold;
+        }
+
+        .form-group label {
+            font-weight: bold;
+        }
+
+        .form-group .form-text {
+            font-style: italic;
+        }
+
+        .btn-success {
+            background-color: #28a745;
+            border-color: #28a745;
+            font-weight: bold;
+        }
+
+        .btn-success:hover {
+            background-color: #218838;
+            border-color: #1e7e34;
+        }
+
+        footer {
+            background-color: #343a40;
+            color: white;
+        }
+	</style>
 </head>
 
 <body>
+<header>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="/">App RH</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+					data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+					aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav ms-auto">
+					<a class="nav-link" href="https://github.com/Diog007/aplicationRH-backend">
+						<i class="fab fa-github"></i> GitHub
+					</a>
+					<li class="nav-item"><a class="nav-link" href="/vagas">Listar Vagas</a></li>
+					<li class="nav-item"><a class="nav-link" href="/cadastrarVaga">Cadastrar Vaga</a></li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+</header>
 
-	<header>
-
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-			<div class="container-fluid">
-				<a class="navbar-brand" href="/">App RH</a>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-					aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarNav">
-					<ul class="navbar-nav">
-						<li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
-
-						<a class="nav-link" href="/vagas">
-							<< Listar Vagas>>
-						</a>
-						</li>
-						<li class="nav-item"><a class="nav-link" href="/cadastrarVaga">
-								<< Cadastrar Vaga>>
-							</a></li>
-
-					</ul>
+<div class="container mt-5">
+	<h1 class="text-center mb-5">Cadastrar Nova Vaga</h1>
+	<form method="post">
+		<div class="form-group mb-3">
+			<label for="nome">Nome do Cargo:</label>
+			<input type="text" class="form-control" id="nome" name="nome" placeholder="Insira o nome do cargo"
+				   required>
+			<small class="form-text text-muted">* Utilize nomes e termos mais utilizados no mercado.</small>
+		</div>
+		<div class="row">
+			<div class="col-md-6">
+				<div class="form-group mb-3">
+					<label for="data">Data de Expiração:</label>
+					<input type="date" class="form-control" id="data" name="data" required>
+					<small class="form-text text-muted">* Data em que a vaga expira.</small>
 				</div>
 			</div>
-		</nav>
-
-	</header>
-
-
-
-	<div class="container">
-
-		<h1>Cadastrar vaga</h1>
-
-		<br>
-
-		<th:block th:include="mensagemValidacao"></th:block>
-
-
-		<form method="post">
-
-
-			<div class="form-group">
-				<label for=""><b>Nome do cargo:</b> </label> <input type="text" class="form-control" value=""
-					placeholder="Insira o nome do cargo" name="nome" required> <small class="form-text text-muted"><i>*
-						Utilize nomes e termos mais utilizados no mercado.</i></small>
-			</div>
-
-			<div class="row">
-				<div class="col">
-
-					<div class="form-group">
-						<label for=""><b>Data de expiração:</b></label> <input type="date" value="" name="data"
-							class="form-control" required /> <small class="form-text text-muted"><i>* Data em que a vaga
-								expira.</i></small>
+			<div class="col-md-6">
+				<div class="form-group mb-3">
+					<label for="salario">Salário:</label>
+					<div class="input-group">
+						<span class="input-group-text">R$</span>
+						<input type="number" class="form-control" id="salario" name="salario" required>
 					</div>
-				</div>
-				<div class="col">
-					<div class="form-group">
-						<label for=""><b>Salário:</b></label> R$ <input type="number" pattern="^\d+(\.|\,)\d{2}$"
-							value="" name="salario" class="form-control" required /> <small
-							class="form-text text-muted"><i>* Utilize valores
-								considerando vírgula e ponto.</i></small>
-					</div>
-
+					<small class="form-text text-muted">* Utilize valores sem considerar vírgulas e pontos.</small>
 				</div>
 			</div>
+		</div>
+		<div class="form-group mb-3">
+			<label for="descricao">Descrição da Vaga:</label>
+			<textarea class="form-control" id="descricao" name="descricao" rows="3" maxlength="254"
+					  required></textarea>
+			<small class="form-text text-muted">* Breve resumo da vaga oferecida.</small>
+		</div>
+		<button type="submit" class="btn btn-success btn-lg btn-block">Adicionar Vaga <i
+				class="fas fa-plus-circle"></i></button>
+	</form>
+</div>
 
+<footer class="fixed-bottom bg-dark text-light text-center py-3">
+        <span>| Application RH | - © 2024 Diog007 - <a href="https://github.com/Diog007" class="text-light">GitHub</a>
+        </span>
+</footer>
 
-			<div class="form-group">
-
-				<label for=""><b>Descrição da vaga:</b></label>
-				<textarea class="form-control" name="descricao" maxlength="254" rows="3" required></textarea>
-				<small class="form-text text-muted"><i>* Breve resumo da
-						vaga oferecida..</i></small>
-
-			</div>
-
-
-			<button type="submit" class="btn btn-success">Adicionar Vaga</button>
-
-		</form>
-
-	</div>
-
-
-	<div style="height: 100px;"></div>
-
-	<div class="footer-copyright fixed-bottom bg-dark text-center py-3">
-		<span class="text-light align-middle">| App RH - UC 12 | - ©
-			2022 Copyright: CTM Supervisão de Educação Online</span>
-	</div>
-
-
-	<!--JavaScript bootstrap-->
-	<script type="text/javascript" src="bootstrap/js/bootstrap.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-
-		</script>
-
-
+<script src="bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
