--- a/src/main/resources/templates/vaga/listaVaga.html
+++ b/src/main/resources/templates/vaga/listaVaga.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang=”pt-br” xmlns:th="http://thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html lang="pt-br">
 
 <head>
 
@@ -12,98 +12,115 @@
 	<!-- Bootstrap -->
 	<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-	<!-- HTML5 shim e Respond.js para suporte no IE8 de elementos HTML5 e media queries -->
-	<!-- ALERTA: Respond.js não funciona se você visualizar uma página file:// -->
-	<!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+	<!-- Estilos personalizados -->
+	<style>
+		body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+        }
 
-	<title>VagasApp</title>
+        .navbar-brand {
+            font-size: 24px;
+            font-weight: bold;
+        }
+
+        .navbar-toggler-icon {
+            background-image: url('data:image/svg+xml;charset=UTF-8,<svg viewBox="0 0 30 30" xmlns="http://www.w3.org/2000/svg"><path stroke="rgba(0,0,0,.5)" stroke-width="2" stroke-linecap="round" stroke-miterlimit="10" d="M4 7h22M4 15h22M4 23h22"/></svg>');
+        }
+
+        .table th,
+        .table td {
+            vertical-align: middle;
+        }
+
+        .footer {
+            background-color: #343a40;
+            color: #ffffff;
+            padding: 20px 0;
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+        }
+	</style>
 
 </head>
 
 <body>
 
-
-
-	<header>
-
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-			<div class="container-fluid">
-				<a class="navbar-brand" href="/">App RH</a>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+<header>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="/">Application RH</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
 					aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarNav">
-					<ul class="navbar-nav">
-						<li class="nav-item"><a class="nav-link active" aria-current="page" href="">Home</a></li>
-						<li class="nav-item"><a class="nav-link" href="/vagas">
-								<< Listar Vagas>>
-							</a></li>
-						<li class="nav-item"><a class="nav-link" href="/cadastrarVaga">
-								<< Cadastrar Vaga>>
-							</a></li>
-
-					</ul>
-				</div>
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav ms-auto">
+					<li class="nav-item">
+						<a class="nav-link" href="https://github.com/Diog007/aplicationRH-backend">
+							<i class="fab fa-github"></i> GitHub
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/vagas">
+							<i class="fas fa-search"></i> Buscar Vagas
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/cadastrarVaga">
+							<i class="fas fa-plus"></i> Cadastrar Vaga
+						</a>
+					</li>
+				</ul>
 			</div>
-		</nav>
-
-	</header>
-
-
-	<div class="container">
-
-		<h1>Lista de vagas cadastradas</h1>
-
-		<br>
-
-		<table class="table table-hover table-responsive w-auto table-striped">
-			<thead>
-				<tr>
-					<th scope="col">Nome da vaga:</th>
-					<th scope="col">Descrição:</th>
-					<th scope="col">Salário:</th>
-					<th scope="col">Expira:</th>
-					<th scope="col"></th>
-					<th scope="col">Ações:</th>
-					<th scope="col"></th>
-				</tr>
-			</thead>
-			<tbody>
-			<tr th:each="vaga: ${vagas}">
-				<td><a th:href="${(#mvc.url('VC#detalhesVaga').arg(0, vaga.codigo)).build()}">
-					<span th:text="${vaga.nome}"></span></a></td>
-				<td><span th:text="${vaga.descricao}"></span></td>
-				<td>R$ <span th:text="${vaga.salario}"></span></td>
-				<td><span th:text="${vaga.data}"></span></td>
-				<td><a th:href="${(#mvc.url('VC#deletarVaga').arg(0, vaga.codigo)).build()}"><button type="button"
-																									 class="btn btn-danger">Excluir</button></a></td>
-				<td><a th:href="${(#mvc.url('VC#editarVaga').arg(0, vaga.codigo)).build()}"><button type="button"
-																									class="btn btn-primary">Editar</button></a></td>
-				<td><a th:href="${(#mvc.url('VC#detalhesVaga').arg(0, vaga.codigo)).build()}"><button type="button"
-																									  class="btn btn-success">Adicionar candidato</button></a></td>
-			</tr>
-			</tbody>
-		</table>
-
-
-		<div style="height: 100px;"></div>
-
-		<div class="footer-copyright fixed-bottom bg-dark text-center py-3">
-			<span class="text-light align-middle">| App RH - UC 12 | - ©
-				2022 Copyright: CTM Supervisão de Educação Online</span>
 		</div>
+	</nav>
+</header>
 
+<div class="container mt-5">
+	<h1 class="text-center mb-4">Lista de Vagas Cadastradas</h1>
 
-		<!--JavaScript bootstrap-->
-		<script type="text/javascript" src="bootstrap/js/bootstrap.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-			integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+	<table class="table table-hover table-responsive w-auto table-striped">
+		<thead>
+		<tr>
+			<th scope="col">Nome da Vaga</th>
+			<th scope="col">Descrição</th>
+			<th scope="col">Salário</th>
+			<th scope="col">Expira</th>
+			<th scope="col">Ações</th>
+		</tr>
+		</thead>
+		<tbody>
+		<tr th:each="vaga: ${vagas}">
+			<td><a th:href="${(#mvc.url('VC#detalhesVaga').arg(0, vaga.codigo)).build()}"><span
+					th:text="${vaga.nome}"></span></a></td>
+			<td><span th:text="${vaga.descricao}"></span></td>
+			<td>R$ <span th:text="${vaga.salario}"></span></td>
+			<td><span th:text="${vaga.data}"></span></td>
+			<td>
+				<div class="btn-group" role="group" aria-label="Ações">
+					<a th:href="${(#mvc.url('VC#deletarVaga').arg(0, vaga.codigo)).build()}"
+					   class="btn btn-danger">Excluir</a>
+					<a th:href="${(#mvc.url('VC#editarVaga').arg(0, vaga.codigo)).build()}"
+					   class="btn btn-primary">Editar</a>
+					<a th:href="${(#mvc.url('VC#detalhesVaga').arg(0, vaga.codigo)).build()}"
+					   class="btn btn-success">Adicionar Candidato</a>
+				</div>
+			</td>
+		</tr>
+		</tbody>
+	</table>
+</div>
 
-			</script>
+<footer class="fixed-bottom bg-dark text-light text-center py-3">
+        <span>| Application RH | - © 2024 Diog007 - <a href="https://github.com/Diog007" class="text-light">GitHub</a>
+        </span>
+</footer>
+
+<!-- JavaScript bootstrap -->
+<script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
