--- a/src/main/resources/templates/vaga/update-vaga.html
+++ b/src/main/resources/templates/vaga/update-vaga.html
@@ -1,128 +1,118 @@
 <!DOCTYPE html>
-<html lang=”pt-br” xmlns:th="http://thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html lang="pt-br">
 
 <head>
-
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
-	<title>App RH</title>
-
-	<!-- Bootstrap para o thymeleaf-->
+	<title>| Atualizar Vaga |</title>
 	<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<style>
+		.navbar-brand {
+            font-weight: bold;
+        }
 
-	<!-- HTML5 shim e Respond.js para suporte no IE8 de elementos HTML5 e media queries -->
-	<!-- ALERTA: Respond.js não funciona se você visualizar uma página file:// -->
-	<!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+        .navbar-toggler {
+            border: none;
+        }
 
-	<title>| App RH - UC 12 |</title>
+        .nav-link {
+            font-weight: bold;
+        }
 
+        .form-control {
+            border-radius: 20px;
+        }
+
+        .btn-success {
+            border-radius: 20px;
+            font-weight: bold;
+            padding: 10px 30px;
+        }
+
+        .footer-copyright {
+            font-size: 14px;
+        }
+	</style>
 </head>
 
 <body>
 
-	<header>
-
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-			<div class="container-fluid">
-				<a class="navbar-brand" href="/">App RH</a>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+<header>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="/">Application RH</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
 					aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarNav">
-					<ul class="navbar-nav">
-						<li class="nav-item"><a class="nav-link active" aria-current="page" href="/">Home</a></li>
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav ms-auto">
+					<li class="nav-item">
+						<a class="nav-link" href="https://github.com/Diog007/aplicationRH-backend">
+							<i class="fab fa-github"></i> GitHub
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/vagas">
+							<i class="fas fa-search"></i> Buscar Vagas
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/cadastrarVaga">
+							<i class="fas fa-plus"></i> Cadastrar Vaga
+						</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+</header>
 
-						<li class="nav-item"><a class="nav-link" href="/vagas">
-								<< Listar Vagas>>
-							</a></li>
-						<li class="nav-item"><a class="nav-link" href="/cadastrarVaga">
-								<< Cadastrar Vaga>>
-							</a></li>
-
-
-					</ul>
+<div class="container mt-5">
+	<h1 class="text-center mb-5">Atualizar Vaga</h1>
+	<form method="post">
+		<div class="mb-3">
+			<label for="nome" class="form-label">Nome do Cargo:</label>
+			<input type="text" class="form-control" id="nome" name="nome" placeholder="Insira o nome do cargo"
+				   required>
+			<small class="form-text text-muted">* Utilize nomes e termos mais utilizados no mercado.</small>
+		</div>
+		<div class="row">
+			<div class="col">
+				<div class="mb-3">
+					<label for="data" class="form-label">Data de Expiração:</label>
+					<input type="date" class="form-control" id="data" name="data" required>
+					<small class="form-text text-muted">* Data em que a vaga expira.</small>
 				</div>
 			</div>
-		</nav>
-
-	</header>
-
-
-	<div class="container">
-
-
-		<th:block th:include="mensagemValidacao"></th:block>
-
-
-		<form method="post">
-
-			<h1>Atualizar vaga</h1>
-
-			<br>
-
-			<div class="form-group">
-				<label for=""><b>Nome do cargo:</b> </label> <input type="text" class="form-control" value=""
-					name="nome" th:attr="value = ${vaga.nome}" required /> <small class="form-text text-muted"><i>* Utilize nomes e
-						termos mais utilizados no mercado.</i></small>
-			</div>
-
-
-			<div class="row">
-
-				<div class="col">
-					<div class="form-group">
-						<label for=""><b>Data de expiração:</b></label> <input type="date" class="form-control" value=""
-							name="data" th:attr="value = ${vaga.data}" required /><small class="form-text text-muted"><i>* Data em que a vaga
-								expira.</i></small>
+			<div class="col">
+				<div class="mb-3">
+					<label for="salario" class="form-label">Salário:</label>
+					<div class="input-group">
+						<span class="input-group-text">R$</span>
+						<input type="number" class="form-control" id="salario" name="salario" required>
 					</div>
-				</div>
-				<div class="col">
-
-					<div class="form-group">
-						<label for=""><b>Salário:</b></label> R$ <input type="number" class="form-control"
-							pattern="^\d+(\.|\,)\d{2}$" value="" name="salario" th:attr="value = ${vaga.salario}" required /><small
-							class="form-text text-muted"><i>* Utilize valores
-								considerando vírgula e ponto.</i></small>
-					</div>
+					<small class="form-text text-muted">* Utilize valores sem considerar vírgulas e pontos.</small>
 				</div>
 			</div>
+		</div>
+		<div class="mb-3">
+			<label for="descricao" class="form-label">Descrição da Vaga:</label>
+			<textarea class="form-control" id="descricao" name="descricao" rows="3" maxlength="254"
+					  required></textarea>
+			<small class="form-text text-muted">* Breve resumo da vaga oferecida.</small>
+		</div>
+		<button type="submit" class="btn btn-success d-block mx-auto">Salvar</button>
+	</form>
+</div>
 
-			<div class="form-group">
-				<label for=""><b>Descrição da vaga:</b></label>
-				<textarea class="form-control" name="descricao" maxlength="254" rows="3" th:text="${vaga.descricao}" required></textarea>
-				<small class="form-text text-muted"><i>* Breve resumo da
-						vaga oferecida..</i></small>
-			</div>
+<footer class="fixed-bottom bg-dark text-light text-center py-3">
+        <span>| Application RH | - © 2024 Diog007 - <a href="https://github.com/Diog007" class="text-light">GitHub</a>
+        </span>
+</footer>
 
-
-
-			<button type="submit" class="btn btn-success">Salvar</button>
-		</form>
-	</div>
-
-
-	<div style="height: 100px;"></div>
-
-	<div class="footer-copyright fixed-bottom bg-dark text-center py-3">
-		<span class="text-light align-middle">| App RH - UC 12 | - ©
-			2022 Copyright: CTM Supervisão de Educação Online</span>
-	</div>
-
-
-	<!--JavaScript bootstrap-->
-	<script type="text/javascript" src="bootstrap/js/bootstrap.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-
-		</script>
-
-
+<script src="bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
